--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+@import url("//fonts.googleapis.com/css?family=Josefin+Sans");
+
+h1 {
+    font-family: 'Lobster';
+    font-size: 50px;
+}
+input{
+    border-radius: 5px;
+}
+h2 {
+    font-family: 'Josefin Sans';
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    padding: 50px;
+}
+
+.button {
+    font-family: 'Josefin Sans';
+    font-size: 20px;
+    color: white;
+    background-color: black;
+    border-radius: 5px;
+}
+
+.buttons {
+    display: flex;
+    gap: 12px;
+}
+
+.input {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    border: 1px solid lightgray;
+    background-color: lightgray;
+    padding: 5px;
+}
+
+img {
+    padding: 5, 3cm;
+    width: 200px;
+    height: 200px;
+    margin: 15px;
+}
+
+.imagenes {
+    text-align: center;
+    margin: 20px;
 }
